# j7s-jwt-mosquitto-auth

./: .clang-format  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  external-deps.cmake  priv.key  pub.key
debian/: changelog  control  copyright  files
examples/: acl.yaml  get-token-example.py  key.pem  keys.yaml  mosquitto.conf  pub.sh  python-device-client.py  python-direct-client.py  run.sh  service-key.pem
include/j7s-plugin/: AuthList.hpp  Authorizer.hpp  j7s-plugin.h  utils.h
include/jwp-plugin/: AuthList.hpp  Authorizer.hpp  jwp-plugin.h
playbooks/: build.yaml  inventory.yaml
src/: AuthList.cpp  Authorizer.cpp  gen-token.cpp  j7s-plugin.cpp  jwp-plugin.cpp  jwt-example.cpp  utils.cpp
test/: authorizer_test.cpp  mosquitto.conf  python-client.py  run.sh  token_test.cpp
